<resources>
    <string name="app_name">个人短信</string>
    <string name="sms">短信</string>
    <string name="my">我的</string>
    <string name="_10_10">10:10</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="verify_copy">验证码已复制</string>
    <string name="add_sms">添加短信</string>
    <string name="SingleSMS">单条短信</string>
    <string name="MultipleSMS">多条短信</string>
    <string name="yes">确认</string>
    <string name="InputPhone">输入号码</string>
    <string name="account">账号</string>
    <string name="_0">0</string>
    <string name="vip_expire_time">会员到期时间:</string>
    <string name="set">设置</string>
    <string name="mail">邮箱地址</string>
    <string name="app_verify">验证码</string>
    <string name="app_get_verify">获取验证码</string>
    <string name="app_pass">登录密码</string>
    <string name="app_ok_pass">确认登录密码</string>
    <string name="app_ok_user_login">已经注册,登录</string>
    <string name="app_account">账号或邮箱</string>
    <string name="app_forgot_password">忘记密码</string>
    <string name="Sign_up_for_an_account">注册账号</string>
    <string name="login">登录</string>
    <string name="Incorrect_email_address">邮箱不正确</string>
    <string name="residue">剩余时间：%s秒</string>
    <string name="passwords_different">两次密码不一样</string>
    <string name="between_8_26_digits">密码规定在8-26位</string>
    <string name="handleExceotion">解析异常</string>
    <string name="network_error">网络异常,稍后尝试</string>
    <string name="Inspection_content">检查内容</string>
    <string name="register">注册</string>
    <string name="verify_no_empty">验证码不能为空</string>
    <string name="buy_vip">购买会员</string>
    <string name="customer">客服</string>
    <string name="opinion">建议反馈</string>
    <string name="noLogin">未登录</string>
    <string name="no">取消</string>
    <string name="send_error">发送失败</string>
    <string name="send_success">发送成功</string>
    <string name="select_buy">选择会员(支付宝支付)</string>
    <string name="Original_price">原价</string>
    <string name="Current_price">现价</string>
    <string name="contact">联系方式(QQ/微信)</string>
    <string name="context">内容</string>
    <string name="post">提交</string>
    <string name="Input_is_empty">输入为空</string>
    <string name="wx">微信账号</string>
    <string name="qq">QQ账号</string>
    <string name="Check_for_new_versions">检查新版本</string>
    <string name="about">关于</string>
    <string name="Version_update">版本更新</string>
    <string name="web_update">浏览器更新</string>
    <string name="cancel">取消</string>
    <string name="version_code">版本号</string>
    <string name="version">版本</string>
    <string name="phone">号码</string>
    <string name="inputPhone">输入号码(回车分割)</string>
    <string name="interval">间隔(1/秒)</string>
    <string name="send_sms">发送短信</string>
    <string name="stop_send">暂停发送</string>
    <string name="setpostUrl">上传URL配置</string>
    <string name="off_post_sms">开启上传短信</string>
    <string name="off_code_copy">开启验证码复制</string>
    <string name="url">url</string>
    <string name="n1_post_n2_json">详细说明:\n1.采用post提交短信\n2.请求参数是json格式\n{"sender":"10683487000000000558","messageBody":"【阿里巴巴】验证码7920，您正在进行短信登录，切勿将验证码泄露于他人，验证码15分钟内有效。","timestampMillis":1713455607000,"slot":0}</string>
    <string name="Open_Source">项目开源</string>
    <string name="success">成功</string>
    <string name="Not_set_url">未设置url</string>
    <string name="copy_phone">复制号码</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
</resources>