<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@mipmap/close">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/circleImageStyle"
                app:srcCompat="@mipmap/icon" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/wx" />

                <TextView
                    android:id="@+id/wx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="?colorAccent"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <ImageView
                android:id="@+id/wx_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="@dimen/padding_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/qq" />

                <TextView
                    android:id="@+id/qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="?colorAccent"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <ImageView
                android:id="@+id/qq_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="@dimen/padding_10" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>